Route frontend API calls through configurable backend base URL

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+VITE_API_BASE_URL=
 VITE_NDMA_ADVISORIES_URL=https://ndma.gov.pk/advisories
 VITE_NDMA_SITREPS_URL=https://ndma.gov.pk/sitreps
 VITE_NDMA_PROJECTIONS_URL=https://ndma.gov.pk/projection-impact-list_new
