Fix credential recovery emails and automate build version

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Build frontend for GitHub Pages
         env:
           VITE_BASE_PATH: /${{ github.event.repository.name }}/
+          VITE_BUILD_VERSION: ${{ github.sha }}
         run: npm run build
 
       - name: Setup Pages
