Add Hugging Face AI provider switch with env-driven model settings

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,13 @@ VITE_NDMA_ADVISORIES_URL=https://ndma.gov.pk/advisories
 VITE_NDMA_SITREPS_URL=https://ndma.gov.pk/sitreps
 VITE_NDMA_PROJECTIONS_URL=https://ndma.gov.pk/projection-impact-list_new
 VITE_PMD_RSS_URL=https://cap-sources.s3.amazonaws.com/pk-pmd-en/rss.xml
+AI_PROVIDER=openai
 OPENAI_API_KEY=
 OPENAI_VISION_MODEL=gpt-4.1-mini
+HUGGINGFACE_API_KEY=
+HUGGINGFACE_BASE_URL=https://router.huggingface.co/v1
+HUGGINGFACE_CHAT_MODEL=meta-llama/Llama-3.1-8B-Instruct
+HUGGINGFACE_VISION_MODEL=meta-llama/Llama-3.2-11B-Vision-Instruct
+HUGGINGFACE_IMAGE_MODEL=black-forest-labs/FLUX.1-dev
 VISION_API_PORT=8787
 COMMUNITY_ISSUES_ADMIN_TOKEN=
