Enable PDF and Word uploads in Material Hubs AI Agent

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "express": "^5.2.1",
     "jspdf": "^4.1.0",
     "leaflet": "^1.9.4",
+    "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "openai": "^6.22.0",
+    "pdf-parse": "^2.4.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-globe.gl": "^2.37.0",
