--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     branch: main
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: npm run server
     healthCheckPath: /health
     autoDeploy: true
